--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ keplergl
 streamlit
 streamlit-folium
 streamlit-keplergl
+streamlit-bokeh-events
 git+git://github.com/giswqs/leafmap
 git+git://github.com/giswqs/geemap
