--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,13 @@
 geopandas
 keplergl
 palettable
-# pygdal==3.2.2.10
 localtileserver
 streamlit
 streamlit-folium
 streamlit-keplergl
 streamlit-bokeh-events
-git+git://github.com/giswqs/leafmap
-git+git://github.com/giswqs/geemap
+leafmap
+geemap
+# git+git://github.com/giswqs/leafmap
+# git+git://github.com/giswqs/geemap
 
