--- a/environment-bk.yml
+++ b/environment-bk.yml
@@ -13,5 +13,5 @@ dependencies:
       - streamlit-folium
       - streamlit-keplergl
       - streamlit-bokeh-events
-      - git+git://github.com/giswqs/leafmap
-      - git+git://github.com/giswqs/geemap
+      - git+https://github.com/giswqs/leafmap
+      - git+https://github.com/giswqs/geemap
