Added hurricane app #46

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ streamlit
 streamlit-folium
 streamlit-keplergl
 streamlit-bokeh-events
+tropycal
 # leafmap
 # geemap
 git+https://github.com/giswqs/leafmap
