--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
 --find-links=https://girder.github.io/large_image_wheels GDAL
 # cartopy
+geemap
 geopandas
+jupyter-server-proxy
 keplergl
-palettable
+leafmap
 localtileserver
+nbserverproxy
 owslib
+palettable
 plotly
 streamlit
+streamlit-bokeh-events
 streamlit-folium
 streamlit-keplergl
-streamlit-bokeh-events
 tropycal
-# leafmap
-# geemap
-git+https://github.com/giswqs/leafmap
-git+https://github.com/giswqs/geemap
+# git+https://github.com/giswqs/leafmap
+# git+https://github.com/giswqs/geemap
 
