Don't pin streamlit version

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ nbserverproxy
 owslib
 palettable
 plotly
-streamlit=>1.18.1
+streamlit
 streamlit-bokeh-events
 streamlit-folium
 streamlit-keplergl
