--- a/.github/workflows/sync_to_hugging_face.yml
+++ b/.github/workflows/sync_to_hugging_face.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://giswqs:$HF_TOKEN@huggingface.co/spaces/giswqs/streamlit master
+        run: git push --force https://giswqs:$HF_TOKEN@huggingface.co/spaces/giswqs/streamlit main
