--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,12 @@
 --find-links=https://girder.github.io/large_image_wheels GDAL
-# cartopy
-folium==0.13.0
+folium
 geemap[extra]
 geopandas
-jupyter-server-proxy
 keplergl
 leafmap
 localtileserver
-nbserverproxy
-owslib
-palettable
 plotly
+pyarrow
 streamlit
-streamlit-bokeh-events
 streamlit-folium
 streamlit-keplergl
-tropycal
-# git+https://github.com/giswqs/leafmap
-# git+https://github.com/giswqs/geemap
-
